--- a/css/monkey.css
+++ b/css/monkey.css
@@ -8,5 +8,8 @@ html {
   right: 120px;
 }
 
-/* Write your solution here */
-
+@media only screen and (min-width: 406px;) {
+  #monkey {
+    top: 0px;
+  }
+}
