--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -18,5 +18,9 @@ html {
   right: 0;
 }
 
-/* Write your solution here */
-
+@media only screen and (min-width: 642px) and (max-width: 1090px) {
+  #dolphin {
+    top: 100px;
+    transform: rotate(0.25turn);
+  }
+}
